--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "laravolt/indonesia": "^0.34.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
