--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.6",
         "sass": "^1.56.1",
-        "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0"
+        "tailwindcss": "^3.1.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.15.3",
+        "pusher-js": "^8.3.0"
     }
 }
