--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravolt/indonesia": "^0.34.0",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
