--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/ui": "^4.2",
         "laravolt/indonesia": "^0.34.0",
         "pusher/pusher-php-server": "^7.2",
-        "realrashid/sweet-alert": "^7.1"
+        "realrashid/sweet-alert": "^7.1",
+        "xendit/xendit-php": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
